reworks cljs-hacks to be more AOT friendly